# enveil

./: Cargo.toml  FEATURES.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
memory/: resume-architecte.md  resume-builder.md  resume-po.md  resume-qa-reviewer.md  state.json
src/: detector.rs  git_hooks.rs  lib.rs  main.rs  protector.rs
tests/: git_hooks_test.rs  integration_test.rs
