[package]
name = "enveil"
version = "0.1.0"
edition = "2021"
description = "Secret detection and protection tool"
authors = ["Zat-Code"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"

[profile.release]
strip = true
lto = true
codegen-units = 1
